# tradutor-juridico

./: app.py  auth.py  main.py  pyproject.toml  requirements.txt  services.py
